# Predprof11_3rd_case

./: .gitignore  README.md
backend/: Cargo.toml  data.db
backend/migrations/: 20260101000000_init.sql
backend/src/: assets.rs  db.rs  error.rs  handlers.rs  logic.rs  main.rs  models.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: api.ts  hooks.ts  types.ts
frontend/src/app/: router.tsx
frontend/src/app/layout/: RootLayout.tsx
frontend/src/pages/: DashboardPage.tsx  ImportPage.tsx
frontend/src/utils/: pdf.ts
