[package]
name = "Predprof11_3rd_case"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.149"
sqlx = { version = "0.9.0-alpha.1", features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15.7"
csv = "1.4.0"
chrono = "0.4.43"
rust-embed = "8.0"
mime_guess = "2.0"
